--- a/index.html
+++ b/index.html
@@ -722,6 +722,12 @@
             100% { transform: rotate(360deg); }
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9948764117679814"
+     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-9948764117679814">
+    
+
+    
 </head>
 <body>
     <!-- Header -->
