--- a/index.html
+++ b/index.html
@@ -735,7 +735,17 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9948764117679814"
      crossorigin="anonymous"></script>
     <meta name="google-adsense-account" content="ca-pub-9948764117679814">
-    
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17059823631">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17059823631');
+</script>
 
     
 </head>
