--- a/index.html
+++ b/index.html
@@ -747,6 +747,15 @@
   gtag('config', 'AW-17059823631');
 </script>
 
+    <!-- Event snippet for 网页浏览 conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17059823631/1STSCNCEpe0aEI-A4cY_',
+      'value': 1.0,
+      'currency': 'CNY'
+  });
+</script>
+
     
 </head>
 <body>
